fullSandbox11072023/force-app/main/default/objects/Billing_Line_Items__c/Billing_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Billing Line Items</label>
    <nameField>
        <label>Billing Line Items</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>