fullSandbox11072023/force-app/main/default/objects/Billing_Line_Items__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>