fullSandbox11072023/force-app/main/default/objects/Billing_Line_Items__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <label>Line Item #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>