fullSandbox11072023/force-app/main/default/objects/Billing_Line_Items__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>BW Order Data</label>
    <referenceTo>BW_Billing_Data__c</referenceTo>
    <relationshipName>Invoice_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>